--- a/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
+++ b/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/App.config
@@ -12,17 +12,19 @@
   <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --></specFlow>
   <appSettings>
     <add key="baseUrl" value="https://test-eas.apprenticeships.sfa.bis.gov.uk" />
+    <add key="tempUrl" value="https://test-eas.apprenticeships.sfa.bis.gov.uk/EmployerAccountPaye/ConfirmPayeScheme?accountId=18&amp;code=aeb7e1ee788f9f2322e040b6"/>
     <add key="browserType" value="chrome" />
-    <add key="PireanUsername" value="" />
-    <add key="PireanPassword" value="" />
-    <add key="InvitedUserName" value="" />
-    <add key="InvitedUserPW" value="" />
+    <add key="PireanUsername" value="jsinclair.pride+1@gmail.com" />
+    <add key="PireanPassword" value="Password01" />
+    <add key="InvitedUserName" value="sfa.aml.test+johndoe@gmail.com" />
+    <add key="InvitedUserPW" value="Password1" />
     <add key="CompanyNumber" value="10284352" />
     <add key="CompanyName" value="OPTISOURCE TECHNOLOGY SOLUTIONS LIMITED" />
-    <add key="HMRCUN" value="" />
-    <add key="HMRCPW" value="" />
+    <add key="CompanyNameExpected" value="Name: OPTISOURCE TECHNOLOGY SOLUTIONS LIMITED Companies House number: 10284352" />
+    <add key="HMRCUN" value="user3" />
+    <add key="HMRCPW" value="password" />
     <add key="WaitinSeconds" value="3" />
-    <add key="IEDriverPath" value="C:\code\AML_TestAutomation_Framework\src\packages\Selenium.WebDriver.IEDriver.2.53.1.1\driver"/>
+    <add key="IEDriverPath" value="C:\code\AML_TestAutomation_Fram ework\src\packages\Selenium.WebDriver.IEDriver.2.53.1.1\driver"/>
     <add key="ChromeDriver" value="C:\code\AML_TestAutomation_Framework\src\packages\Selenium.WebDriver.ChromeDriver.2.23.0.1\driver"/>
     <add key="PhantomDriver" value="C:\code\AML_TestAutomation_Framework\src\packages\PhantomJS.2.1.1\tools\phantomjs"/>
   </appSettings>
