--- a/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests.csproj
+++ b/src/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests/Sfa.Das.EmployerApprenticeshipService.UIAcceptanceTests.csproj
@@ -140,6 +140,7 @@
     </None>
     <None Include="Regression\EmployerAccount.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>EmployerAccount1.feature.cs</LastGenOutput>
     </None>
     <None Include="Regression\ManageTeams.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
